--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     "babel-loader": "^8.2.2",
     "css-loader": "^5.2.4",
     "harmoware-vis": "^1.7.15",
-    "node-sass": "^4.14.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.5",
     "redux": "^4.1.1",
+    "sass": "^1.51.0",
     "sass-loader": "^10.1.1",
     "style-loader": "^2.0.0",
     "webpack": "^4.46.0",
