--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
   "dependencies": {
     "@babel/core": "7.17.10",
     "@babel/preset-react": "7.16.7",
-    "@reduxjs/toolkit": "^1.8.1",
+    "@reduxjs/toolkit": "1.8.1",
     "babel-loader": "8.2.5",
     "css-loader": "5.2.7",
-    "harmoware-vis": "1.8.7",
+    "harmoware-vis": "1.8.13",
     "react": "16.14.0",
     "react-dom": "16.14.0",
-    "react-redux": "7.2.8",
+    "react-redux": "8.0.2",
     "redux": "4.2.0",
     "sass": "1.51.0",
     "sass-loader": "10.2.1",
